--- a/package.json
+++ b/package.json
@@ -3,12 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.9.3",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "antd": "^3.26.11",
+    "aos": "^2.3.4",
+    "flickity": "^2.2.1",
+    "flickity-fade": "^1.0.0",
+    "material-ui": "^0.20.2",
+    "pure-react-carousel": "^1.25.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "react-slick": "^0.25.2"
   },
   "scripts": {
     "start": "react-scripts start",
