--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "pure-react-carousel": "^1.25.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-slick": "^0.25.2"
   },
